[project]
name = "preview-wrangler"
version = "0.1.0"
description = "Process S3 inventory data to extract and download preview files"
requires-python = ">=3.9"
dependencies = [
    "boto3>=1.34.0",
    "pandas>=2.0.0",
    "click>=8.1.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.66.0",
]

[project.scripts]
preview-wrangler = "preview_wrangler.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501"]  # Line too long - handled by formatter

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"